[gd_scene load_steps=25 format=3 uid="uid://r4d665gh34sp"]

[ext_resource type="Texture2D" uid="uid://bnfeq7f3gklk2" path="res://Assets/Sprites/character/character_001_isaac.png" id="1_kelma"]
[ext_resource type="Script" uid="uid://c48056jswtsfw" path="res://Scripts/player.gd" id="1_y8w33"]
[ext_resource type="AudioStream" uid="uid://cunjcrhahptt6" path="res://Assets/Sound/player/isaac dies new 1.wav" id="3_xa75v"]
[ext_resource type="AudioStream" uid="uid://ddjkadcbv5n1p" path="res://Assets/Sound/player/hurt grunt 1.wav" id="4_58ae2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lgjog"]
atlas = ExtResource("1_kelma")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8w33"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ao7i"]
atlas = ExtResource("1_kelma")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa75v"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58ae2"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivevv"]
atlas = ExtResource("1_kelma")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6jsd"]
atlas = ExtResource("1_kelma")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qlh"]
atlas = ExtResource("1_kelma")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sw5t"]
atlas = ExtResource("1_kelma")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij4jb"]
atlas = ExtResource("1_kelma")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c68nv"]
atlas = ExtResource("1_kelma")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c31lq"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dof7"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ao7i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgjog")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8w33")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ao7i")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa75v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58ae2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivevv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6jsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sw5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij4jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c68nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c31lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dof7")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1sypm"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn0wv"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqmt2"]
atlas = ExtResource("1_kelma")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c40dt"]
atlas = ExtResource("1_kelma")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lgjog"]
animations = [{
"frames": [],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sypm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn0wv")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqmt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c40dt")
}],
"loop": true,
"name": &"move",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7d6xm"]
radius = 9.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(498, 373)
collision_layer = 2
script = ExtResource("1_y8w33")

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_4ao7i")
animation = &"idle"
autoplay = "walk"

[node name="Head" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_lgjog")
animation = &"idle"

[node name="CDTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_7d6xm")

[node name="Detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_7d6xm")

[node name="NoDamageTimer" type="Timer" parent="."]
one_shot = true

[node name="DeadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xa75v")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_58ae2")

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
